--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <body>
 
-      <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   
