--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>James Quiambao | Website</title>
+    <title>James Quiambao | Website </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
@@ -18,7 +18,7 @@
 
   <body>
 
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+      <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   
@@ -47,14 +47,14 @@
 
 <!-- Profile Section-->
 <div class="container-fluid pcontainer text-center" id="Profile-Section">
-  <h1><br>Hey! I'm James</h1>
+  <h1>I'm James<br>Welcome to my Site!</h1>
 </div>
 
 <!-- About Me Section-->
-<div class="container-fluid about-container" id="About-Section">
+<div class="container-fluid about-container " id="About-Section">
   <div> 
     <h1 class="text-center">About Me</h1>
-    <p>My name is James Quiambao and I'm going into my first year of Mechanical Engineering at the University of Waterloo. At first I wasn't too fond of the technology sector but witnessing first hand the power of coding and how you can create anything you want, and how you are only bounded by your imagination motivated me to learn programming because I want to have this ability and not be limited by my technical skills. Other than learning programming, other interests of mine include working out, basketball, breakdancing, and reading books.
+    <p>My name is James Quiambao and I'm going into my first year of Mechanical Engineering at the University of Waterloo. At first I wasn't too fond of the technology sector but witnessing first hand the power of coding and how you are limited only by your imagination motivated me to learn programming. Other than learning programming, other interests of mine include working out, basketball, breakdancing, and reading books.
       <br>My technical skills include C#, MATLAB, HTML5/CSS3, Javascript, SQL. Frameworks: JQuery, Bootstrap, CAD Software: AutoCAD.  </p>
   </div>
 </div>
@@ -72,28 +72,27 @@
     </div>
     <div class="projectWrapper">
       <img class="" src="http://placehold.it/350x150" alt="" />
-      <div class="projectHoverText">Test</div>
+      <div class="projectHoverText"></div>
     </div>
     <div class="projectWrapper">
       <img class="" src="http://placehold.it/350x150" alt="" />
-      <div class="projectHoverText">Test</div>
+      <div class="projectHoverText"></div>
     </div>
     <div class="projectWrapper">
       <a target="_blank" href="http://codepen.io/Jam3s_Q/full/LZpJLN/">
         <img class=""src="http://placehold.it/350x150" alt="" />
       </a>
-      <div class="projectHoverText">Test</div>
+      <div class="projectHoverText"></div>
     </div>
     <div class="projectWrapper">
       <img class="" src="http://placehold.it/350x150" alt="" />
-      <div class="projectHoverText">Test</div>
+      <div class="projectHoverText"></div>
     </div>
     <div class="projectWrapper">
       <img class="" src="http://placehold.it/350x150" alt="" />
-      <div class="projectHoverText">Test</div>
+      <div class="projectHoverText"></div>
     </div>
   </div>
-  
 </div>
 
 <!-- Contact Section -->
@@ -101,7 +100,7 @@
   
   <div>
   <h1><br>Connect With Me!</h1>
-  <p class="connect-container">If you want to get in touch with me or see any of my other works, my contact information and various networks are listed below.</p>
+  <p class="connect-container">If you want to get in touch with me or see any of my other works, my contact information is listed below.</p>
      <ul class="social">
         <li><p><span><a href="https://ca.linkedin.com/in/jamesquiambao" target="_blank"><i class="linkedin fa fa-linkedin-square fa-2x"></i> https://ca.linkedin.com/in/jamesquiambao</a></span> </p></li>
          <li><p><span><a href="https://codepen.io/Jam3s_Q/pens/public/" target="_blank"><i class="fa fa-codepen fa-2x"></i> https://codepen.io/Jam3s_Q/pens/public/</a></span></p></li>
