--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="container-fluid about-container " id="About-Section">
   <div> 
     <h1 class="text-center">About Me</h1>
-    <p>My name is James Quiambao and I'm going into my first year of Mechanical Engineering at the University of Waterloo. At first I wasn't too fond of the technology sector but witnessing first hand the power of coding and how you are limited only by your imagination motivated me to learn programming. Other than learning programming, other interests of mine include working out, basketball, breakdancing, and reading books.
+    <p>My name is James Quiambao and I'm going into my first year of Mechanical Engineering at the University of Waterloo. At first I wasn't too fond of the technology sector but witnessing first hand the power of coding and how you are limited only by your imagination motivated me to learn programming. Other than learning programming, other interests of mine include working out, basketball, volunteering, and reading books.
       <br>My technical skills include C#, MATLAB, HTML5/CSS3, Javascript, SQL. Frameworks: JQuery, Bootstrap, CAD Software: AutoCAD.  </p>
   </div>
 </div>
