Added Random quote Generator to Projects Section

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
       </a>
     </div>
     <div class="projectWrapper">
-      <img class="" src="http://placehold.it/350x150" alt="" />
-      <div class="projectHoverText"></div>
+      <a target="_blank" href="http://codepen.io/Jam3s_Q/full/VKabbq/">
+      <img class="" src="http://i1036.photobucket.com/albums/a441/James_Q/2016-09-26%201_zpsdnujwvps.png" alt="" />
+      <div class="projectHoverText">Random Quote Generator</div>
+      </a>  
     </div>
     <div class="projectWrapper">
       <img class="" src="http://placehold.it/350x150" alt="" />
