Added meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html >
   <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="James, Quiambao, Website, Waterloo, Developer, Engineering">
+    <meta name="author" content="James Quiambao">
+    <meta name="description" content="Personal website to showcase information, projects, and other fun stuff">
     <title>James Quiambao | Website </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
