--- a/index.html
+++ b/index.html
@@ -86,14 +86,15 @@
 <div class="contact-container container-fluid text-center center" id="Contact-Section">
   
   <div>
-  <h1><br>Connect With Me!</h1>
-  <p class="connect-container">If you want to get in touch with me or see any of my other works, my contact information is listed below.</p>
+  <h1>Get in Touch</h1>
+    <h4><br>Contact</h4>
+  <p class="connect-container">jquiambao@uwaterloo.ca<br>647-262-8915</p>
+    <h4><br>Follow</h4>
      <ul class="social">
-        <li><p><span><a href="https://ca.linkedin.com/in/jamesquiambao" target="_blank"><i class="linkedin fa fa-linkedin-square fa-2x"></i> https://ca.linkedin.com/in/jamesquiambao</a></span> </p></li>
-         <li><p><span><a href="https://codepen.io/Jam3s_Q/pens/public/" target="_blank"><i class="fa fa-codepen fa-2x"></i> https://codepen.io/Jam3s_Q/pens/public/</a></span></p></li>
-       <li><p><span><a href=""><i class="fa fa-envelope fa-2x"></i></a></span> jquiambao@uwaterloo.ca</p></li>
-       <li><p><span><a href=""><i class="fa fa-phone fa-2x"></i></a></span> 647-262-8915</p></li>
-       <li><p><span><a href=""><i class="fa fa-location-arrow fa-2x"></i></a></span> Waterloo, Ontario</p></li>
+         <li><a href="https://ca.linkedin.com/in/jamesquiambao" target="_blank"><i class="linkedin fa fa-linkedin-square fa-3x"></i></a></li>
+         <li><a href="https://codepen.io/Jam3s_Q/pens/public/" target="_blank"><i class="fa fa-codepen fa-3x"></i></a></li>
+         <li><a href="https://github.com/Jam3sQ" target="_blank"><i class="fa fa-github fa-3x"></i></a></li>
+         <li><a href="https://www.freecodecamp.com/jam3sq" target="_blank"><i class="fa fa-fire fa-3x"></i></a></li>
       </ul>
   </div>
 </div>
