Added Local Weather App

--- a/index.html
+++ b/index.html
@@ -78,7 +78,13 @@
       <img class="" src="http://i1036.photobucket.com/albums/a441/James_Q/2016-09-26%201_zpsdnujwvps.png" alt="" />
       <div class="projectHoverText">Random Quote Generator</div>
       </a>  
-    </div>  
+    </div>
+    <div class="projectWrapper">
+      <a target="_blank" href="http://codepen.io/Jam3s_Q/full/ozkGkb/">
+        <img class="" src="[URL=http://i1036.photobucket.com/albums/a441/James_Q/WeatherApp_zpsg8q9mknu.png" alt="" />
+        <div class="projectHoverText">Local Weather App</div>
+      </a>
+    </div>
   </div>
 </div>
 
@@ -104,7 +110,7 @@
 
 <footer class="text-center">
   <div class="footer-paragraph">
-    <p>Meticulously hand crafted by James Quiambao &copy 2016.</p>
+    <p>Meticulously hand crafted by James Quiambao &copy; 2016.</p>
   </div>
 </footer>
 </body>
