Fixed photo link for weather app

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     <div class="projectWrapper">
       <a target="_blank" href="http://codepen.io/Jam3s_Q/full/ozkGkb/">
-        <img class="" src="[URL=http://i1036.photobucket.com/albums/a441/James_Q/WeatherApp_zpsg8q9mknu.png" alt="" />
+        <img class="" src="http://i1036.photobucket.com/albums/a441/James_Q/WeatherApp_zpsg8q9mknu.png" alt="" />
         <div class="projectHoverText">Local Weather App</div>
       </a>
     </div>
