--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="author" content="James Quiambao">
     <meta name="description" content="Personal website to showcase information, projects, and other fun stuff">
     <title>James Quiambao | Website </title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon.ico/favicon-16x16.png">
 
     <!-- Responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
